# neural-network

./: Cargo.toml  math.txt
.cargo/: config.toml
benches/: nalgebra.rs
src/: lib.rs  main.rs  mnist.rs  nn.rs  nn_f32.rs  parallel.rs
